* Updated ffmpeg
* Updated MediaInfoLib to v0.7.56
* Updated ZenLib to v0.4.26
* Updated SoundTouch to v1.7.0pre r142
* Updated VirtualDub to v1.10.2-test6
* Updated French, Turkish, Czech, Russian, Ukrainian, simplified Chinese, Japanese,
  traditional Chinese, Italian, German and Polish translations
* Removed GTSdll support
* Removed the option to disable XP theming
* Removed SSF support
! Broken playback and picture on H.264 & MPEG2 interlaced with DXVA on
  intergrated Intel adapter
! The settings location is now changed only when applying the changes in the
  options dialog instead of immediately after changing the state of the checkbox
! Improve/Fix the "Open" dialog:
   - the "OK" button will be disabled until a file has been selected (this avoids
     an error when clicking on "OK" while no file was selected)
   - when the selected file cannot be dubbed (for example when opening an rtsp
     stream) the wrong label was grayed out
! MatroskaSplitter: Better detection of fps for some webm files
! MPCVideoDec: Crash with some RV30/40 files when there are no input data from splitter
! MpegSplitter: Removed crackling from LPCM tracks when switching and seeking
! MPCVideoDec: H.264 DXVA decoder skipped broken frames on interlaced material
! AviSplitter: Fix looping not working on short animations
! MpegSplitter: Fix incorrect detection of MPEG Audio stream as AAC
! WebServer: Fix a few errors and typos
! The Windows 7 taskbar was sometimes not correctly updated (for example when opening
  another video without closing the previous one). The preview was incorrectly cropped
  when the menu was hidden.
! Ticket #869, The playlist visibility state was incorrectly restored when MPC-HC
  was quited in fullscreen mode while the option "Hide on fullscreen" was enabled
! Ticket #1182, Unable to playback MPEG2 in AVI
! Ticket #1290, Fix the reversed behavior of the playlist option "Hide on fullscreen"
  when the "Launch files in fullscreen" option is enabled